--- a/Calculator 2.ipynb
+++ b/Calculator 2.ipynb
@@ -28,6 +28,55 @@
    "execution_count": null,
    "id": "9eadefe5",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the first number 1\n",
+      "Enter the second number /\n",
+      "Please enter a valid integer\n",
+      "Enter the first number 1\n",
+      "Enter the second number 0\n",
+      "Enter a mathematical operation (+,-,*,/):/\n",
+      "Division by 0 is not allowed, please enter a new value\n"
+     ]
+    }
+   ],
+   "source": [
+    "def simple_calculator():\n",
+    "    \n",
+    "    success = True\n",
+    "    while success:\n",
+    "        try:    \n",
+    "            num1 = float(input(\"Enter the first number \"))\n",
+    "            num2 = float(input(\"Enter the second number \"))\n",
+    "            operation = input(\"Enter a mathematical operation (+,-,*,/):\")\n",
+    "            if operation == \"+\":\n",
+    "                result = num1 + num2\n",
+    "            elif operation == \"-\":\n",
+    "                result = num1 - num2 \n",
+    "            elif operation == \"*\":\n",
+    "                result = num1*num2\n",
+    "            elif operation == \"/\":\n",
+    "                result = num1/num2\n",
+    "            print(f\"Result:{result}\")\n",
+    "            break\n",
+    "        except ValueError:\n",
+    "            print('Please enter a valid integer')\n",
+    "        except ZeroDivisionError:\n",
+    "            print('Division by 0 is not allowed, please enter a new value')\n",
+    "        except:\n",
+    "            print('There is an error')\n",
+    "        \n",
+    "simple_calculator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16a1ffb8",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
